tests/gen-test/test_out/iterative-fib.txt
error: type mismatch
 --> iterative-fib\root.ctl:9:15
  |
9 |         break b
  |               ^ mismatch occurred here
  |
  = info: expected '!' but got 'uint'

